# nostric

./: .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  README.md  build-rust.sh  build.sh  canister_ids-dev.json  canister_ids.json  commands.sh  deploy-local-ckbtc.sh  dfx.json  ic-icrc1-ledger.wasm  icrc1.local.did  icrc1.public.did  icrc1.wasm  ledger_canister.wasm  mops.toml  package-lock.json  package.json  restarter.sh  rollup.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  update.types.mjs  vetkd_system_api.did  vite.config.ts
.github/: dependabot.yml
.github/workflows/: cd.yaml  ci.yaml  deploy-prod.yaml
src/: app.postcss
src/backend/: main.mo
src/backend/test/: main.test.mo
src/backend/utils/: Account.mo  CkBtcTypes.mo  CkBtcUtils.mo  Hex.mo
src/candb_file_upload/: main.mo
src/candb_file_upload/test/: main.test.mo
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js  index.js
src/declarations/frontend/: frontend.did  frontend.did.d.ts  frontend.did.js  index.d.ts  index.js
src/declarations/internet_identity/: internet_identity.did  internet_identity.did.d.ts  internet_identity.did.js
src/dynamic_relays/: Cargo.toml  dynamic_relays.did
src/dynamic_relays/src/: businesslogic.rs  env.rs  lib.rs  lifetime.rs
src/foreign_relay/: Cargo.toml
src/foreign_relay/src/: canister.rs  lib.rs
src/frontend/public/: index.html
src/relay/: Cargo.toml  relay.did
src/storage/: main.mo
test/backend/: main.test.mo
test/candb_file_upload/: main.test.mo
test/storage/: main.test.mo
(+173 files in other folders)
